# stubs

./: .gitgnore  .gitignore  README.md  devbox.json  pyproject.toml
Crypto-stubs/Cipher/: AES.pyi  ChaCha20.pyi  DES.pyi  blockalgo.pyi
Crypto-stubs/PublicKey/: RSA.pyi
Crypto-stubs/Util/: Padding.pyi  number.pyi
IPython-stubs/: __init__.pyi  display.pyi
MySQLdb-stubs/: __init__.pyi  _mysql.pyi
PIL-stubs/: Image.pyi
aioprocessing-stubs/: __init__.pyi
arsenic-stubs/: __init__.pyi  browsers.pyi  constants.pyi  errors.pyi  keys.pyi  services.pyi  session.pyi  utils.pyi
asyncio_pool-stubs/: __init__.pyi
bs4-stubs/: __init__.pyi
dash-stubs/: __init__.pyi  dash_table.pyi  dcc.pyi  dependencies.pyi  html.pyi
dash-stubs/development/: base_component.pyi
faker-stubs/: __init__.pyi  proxy.pyi
faker_vehicle-stubs/: __init__.pyi
gdown-stubs/: __init__.pyi
httpx-stubs/: __init__.pyi
jwt-stubs/: __init__.pyi
kaggle/api/: kaggle_api_extended.pyi
matplotlib-stubs/: cm.pyi  colors.pyi  figure.pyi  pyplot.pyi
matplotlib-stubs/axes/: __init__.pyi  _base.pyi  _subplots.pyi
motor-stubs/: motor_asyncio.pyi
mte/: collections.py  json.py  numbers.py  numpy.py  pandas.py  protocols.py  toml.py  typevar.py  yaml.py
networkx-stubs/: __init__.pyi
networkx-stubs/classes/: coreviews.pyi  reportviews.pyi
numba-stubs/: __init__.pyi
numpy-stubs/: __init__.pyi  fft.pyi  linalg.pyi  random.pyi  typing.pyi
orjson-stubs/: __init__.pyi
pandas-stubs/: __init__.pyi
pandas-stubs/core/: indexing.pyi
pandas-stubs/core/arrays/: categorical.pyi
pandas-stubs/core/groupby/: generic.pyi
pandas-stubs/core/indexes/: accessors.pyi  base.pyi  multi.pyi
pandas-stubs/core/strings/: accessor.pyi
pandas-stubs/io/formats/: style.pyi
pandas-stubs/plotting/: _core.pyi
plotly-stubs/: express.pyi  graph_objects.pyi  subplots.pyi
pwn-stubs/: __init__.pyi
pwnlib-stubs/: asm.pyi  context.pyi  fiddling.pyi  fmtstr.pyi  gdb.pyi  log.pyi  shellcraft.pyi
pwnlib-stubs/elf/: __init__.pyi
pwnlib-stubs/tubes/: listen.pyi  process.pyi  remote.pyi  ssh.pyi  tube.pyi
pwnlib-stubs/util/: cyclic.pyi  packing.pyi
pychromecast-stubs/: __init__.pyi
pychromecast-stubs/controllers/: __init__.pyi  media.pyi
pymongo-stubs/: errors.pyi  results.pyi
scipy-stubs/: ndimage.pyi  signal.pyi  special.pyi
scipy-stubs/io/: __init__.pyi  wavfile.pyi
scipy-stubs/signal/: __init__.pyi  windows.pyi
scipy-stubs/stats/: __init__.pyi  _stats_py.pyi
skimage/: color.pyi  data.pyi  io.pyi
skimage-stubs/: __init__.pyi  color.pyi  data.pyi  exposure.pyi  morphology.pyi
skimage-stubs/measure/: __init__.pyi  _measure.pyi
sklearn/: base.pyi  ensemble.pyi  impute.pyi  model_selection.pyi
sklearn-stubs/: base.pyi  impute.pyi  linear_model.pyi  metrics.pyi  model_selection.pyi  tree.pyi
sqlalchemy-stubs/: __init__.pyi  event.pyi
sqlalchemy-stubs/dialects/: postgresql.pyi
sqlalchemy-stubs/engine/: base.pyi  cursor.pyi  result.pyi  row.pyi
sqlalchemy-stubs/orm/: __init__.pyi  decl_api.pyi  query.pyi
sqlalchemy-stubs/sql/: compiler.pyi  elements.pyi  schema.pyi  selectable.pyi  visitors.pyi
strawberry-stubs/: __init__.pyi  fastapi.pyi  permission.pyi  types.pyi
tests/: contextmanagers.py  test_all.py
tomli-stubs/: __init__.pyi
typing_tests/bd/: big_data.py  download.py  physical.py  schema.py  table_size.py  times.py
typing_tests/cc/: 1996.py  easter.py  eliza.py  gtn1.py  image.py  restriced_shell.py  sqlinjectlib.py  the_answer.py
typing_tests/chromecast/: mutechromecastads.py
typing_tests/dpp/: generator.py  notebook.py
typing_tests/fesi/: 2dfiltering.py  butterworth.py  colore.py  dft.py  geometriche.py  istogrammi.py  progetto.py  sound_processing.py  time_series.py
typing_tests/ids/: esplorazionedati.py  introduzionepandas.py  labo1.py  labo2.py  labo3.py  labo4.py  progetto.py  progetto2.py  progetto3.py
typing_tests/kaggle/: basicdataexploration.py  basicdataexplorationex.py  firstmodel.py  firstmodelex.py  missingvalues.py  modelvalidation.py  randomforests.py  underfittingoverfitting.py
typing_tests/mte/: collections.py  json.py  numbers.py  protocols.py
typing_tests/pcad/: tests1.py
typing_tests/pulcige/: ctftime.py
typing_tests/scripts/: booker.py  contextmanagers.py
typings/matplotlib-stubs/: pyplot.pyi
typings/numba-stubs/: __init__.pyi
typings/numpy-stubs/: __init__.pyi  typing.pyi
yaml-stubs/: __init__.pyi
