[tool.poetry]
name = "common-stubs"
version = "0.1.0"
description = "Various packages stubs"
authors = ["Riccardo Isola"]
license = "GPL-3"
packages = [
    {include = "aioprocessing-stubs"},
    {include = "arsenic-stubs"},
    {include = "Crypto-stubs"},
    {include = "jwt-stubs"},
    {include = "matplotlib-stubs"},
    {include = "numba-stubs"},
    {include = "numpy-stubs"},
    {include = "pandas-stubs"},
    {include = "PIL-stubs"},
    {include = "plotly-stubs"},
    {include = "pwn-stubs"},
    {include = "pwnlib-stubs"},
    {include = "scipy-stubs"},
    {include = "sqlalchemy-stubs"},
    {include = "strawberry-stubs"},
]

[tool.poetry.dependencies]


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
