[tool.poetry]
name = "common-stubs"
version = "0.1.0"
description = "Various packages stubs"
authors = ["Riccardo Isola"]
license = "GPL-3"
packages = [
    {include = "arsenic-stubs"},
    {include = "asyncio_pool-stubs"},
    {include = "bs4-stubs"},
    {include = "Crypto-stubs"},
    {include="dash-stubs"},
    {include = "faker_vehicle-stubs"},
    {include = "faker-stubs"},
    {include = "gdown-stubs"},
    {include = "httpx-stubs"},
    {include = "IPython-stubs"},
    {include = "jwt-stubs"},
    {include = "matplotlib-stubs"},
    {include = "motor-stubs"},
    {include = "MySQLdb-stubs"},
    {include = "numba-stubs"},
    {include = "numpy-stubs"},
    {include = "pandas-stubs"},
    {include = "PIL-stubs"},
    {include = "plotly-stubs"},
    {include = "pwn-stubs"},
    {include = "pwnlib-stubs"},
    {include="pychromecast-stubs"},
    {include="pymongo-stubs"},
    {include = "scipy-stubs"},
    {include="skimage-stubs"},
    {include = "sqlalchemy-stubs"},
    {include = "strawberry-stubs"},
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"

[tool.poetry.dev-dependencies]
# Tools
pyright = "^1.1.269"
pytest = "^7.1.3"
ipython = "^8.5.0"
# Packages
arsenic = "^21.8"
asyncio-pool = "^0.6.0"
beautifulsoup4 = "^4.11.1"
pycryptodome = "^3.15.0"
dash = "^2.6.2"
faker-vehicle = "^0.2.0"
Faker = "^14.2.1"
gdown = "^4.5.1"
httpx = "^0.23.0"
jwt = "^1.3.1"
matplotlib = "^3.6.0"
motor = "^3.0.0"
mysql = "^0.0.3"
numba = "^0.56.2"
numpy = "^1.23.3"
pandas = "^1.4.4"
Pillow = "^9.2.0"
plotly = "^5.10.0"
pwntools = "^4.8.0"
PyChromecast = "^9.4.0"
pymongo = "^4.2.0"
scipy = "^1.9.1"
SQLAlchemy = "^1.4.41"
strawberry-graphql = "^0.132.1"
fastapi = "^0.85.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]